internal/gatewayapi/testdata/listenerset-protocol-conflict-udp-first.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    name: gateway-with-listenerset-udp-first
    namespace: envoy-gateway
  spec:
    allowedListeners:
      namespaces:
        from: Same
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: gateway-listener.com
      name: gateway-listener
      port: 8080
      protocol: HTTP
  status:
    attachedListenerSets: 1
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: gateway-listener
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
infraIR:
  envoy-gateway/gateway-with-listenerset-udp-first:
    proxy:
      listeners:
      - name: envoy-gateway/gateway-with-listenerset-udp-first/gateway-listener
        ports:
        - containerPort: 8080
          name: http-8080
          protocol: HTTP
          servicePort: 8080
      - name: envoy-gateway/gateway-with-listenerset-udp-first/envoy-gateway/listenerset-udp-first/udp-first
        ports:
        - containerPort: 10080
          name: udp-80
          protocol: UDP
          servicePort: 80
      - name: envoy-gateway/gateway-with-listenerset-udp-first/envoy-gateway/listenerset-udp-first/http-after-udp
        ports:
        - containerPort: 10080
          name: http-80
          protocol: HTTP
          servicePort: 80
      metadata:
        labels:
          gateway.envoyproxy.io/owning-gateway-name: gateway-with-listenerset-udp-first
          gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway
        ownerReference:
          kind: GatewayClass
          name: envoy-gateway-class
      name: envoy-gateway/gateway-with-listenerset-udp-first
      namespace: envoy-gateway-system
listenerSets:
- apiVersion: gateway.networking.k8s.io/v1
  kind: ListenerSet
  metadata:
    name: listenerset-udp-first
    namespace: envoy-gateway
  spec:
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      name: udp-first
      port: 80
      protocol: UDP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: http-after-udp.example.com
      name: http-after-udp
      port: 80
      protocol: HTTP
    - allowedRoutes:
        namespaces:
          from: All
      name: tcp-after-http
      port: 80
      protocol: TCP
    - allowedRoutes:
        namespaces:
          from: All
      hostname: http-second-after-tcp.example.com
      name: http-second-after-tcp
      port: 80
      protocol: HTTP
    parentRef:
      group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-with-listenerset-udp-first
      namespace: envoy-gateway
  status:
    conditions:
    - lastTransitionTime: null
      message: Some listeners are invalid
      reason: ListenersNotValid
      status: "True"
      type: Accepted
    - lastTransitionTime: null
      message: Some listeners are not programmed
      reason: Programmed
      status: "True"
      type: Programmed
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: udp-first
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: UDPRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: http-after-udp
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "True"
        type: Conflicted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Accepted
      - lastTransitionTime: null
        message: All listeners for a given port must use a compatible protocol
        reason: ProtocolConflict
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tcp-after-http
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Sending translated listener configuration to the data plane
        reason: Programmed
        status: "True"
        type: Programmed
      - lastTransitionTime: null
        message: Listener has been successfully translated
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      - lastTransitionTime: null
        message: No conflicts detected
        reason: NoConflicts
        status: "False"
        type: Conflicted
      name: http-second-after-tcp
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      - group: gateway.networking.k8s.io
        kind: GRPCRoute
xdsIR:
  envoy-gateway/gateway-with-listenerset-udp-first:
    accessLog:
      json:
      - path: /dev/stdout
    globalResources:
      proxyServiceCluster:
        metadata:
          kind: Service
          name: envoy-envoy-gateway-gateway-with-listenerset-udp-first-2aa56f18
          namespace: envoy-gateway-system
          sectionName: "8080"
        name: envoy-gateway/gateway-with-listenerset-udp-first
        settings:
        - addressType: IP
          endpoints:
          - host: 7.6.5.4
            port: 8080
            zone: zone1
          metadata:
            kind: Service
            name: envoy-envoy-gateway-gateway-with-listenerset-udp-first-2aa56f18
            namespace: envoy-gateway-system
            sectionName: "8080"
          name: envoy-gateway/gateway-with-listenerset-udp-first
          protocol: TCP
    http:
    - address: 0.0.0.0
      externalPort: 8080
      hostnames:
      - gateway-listener.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-udp-first
        namespace: envoy-gateway
        sectionName: gateway-listener
      name: envoy-gateway/gateway-with-listenerset-udp-first/gateway-listener
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 8080
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - http-after-udp.example.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-udp-first
        namespace: envoy-gateway
        sectionName: http-after-udp
      name: envoy-gateway/gateway-with-listenerset-udp-first/envoy-gateway/listenerset-udp-first/http-after-udp
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    - address: 0.0.0.0
      externalPort: 80
      hostnames:
      - http-second-after-tcp.example.com
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-udp-first
        namespace: envoy-gateway
        sectionName: http-second-after-tcp
      name: envoy-gateway/gateway-with-listenerset-udp-first/envoy-gateway/listenerset-udp-first/http-second-after-tcp
      path:
        escapedSlashesAction: UnescapeAndRedirect
        mergeSlashes: true
      port: 10080
    readyListener:
      address: 0.0.0.0
      ipFamily: IPv4
      path: /ready
      port: 19003
    udp:
    - address: 0.0.0.0
      externalPort: 80
      metadata:
        kind: Gateway
        name: gateway-with-listenerset-udp-first
        namespace: envoy-gateway
        sectionName: udp-first
      name: envoy-gateway/gateway-with-listenerset-udp-first/envoy-gateway/listenerset-udp-first/udp-first
      port: 10080
